--- a/www/styles.css
+++ b/www/styles.css
@@ -1,43 +1,61 @@
-/* import playfair display from google fonts */
-
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
-
-/* import Raleway */
-
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
-
 /* import fira sans condensed */
-
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
 
-/* apply this font to the h1 */
-
-/* make the h1 headling look amazing */
+/* import Lilita One from the google api */
+@import url("https://fonts.googleapis.com/css2?family=Viga&display=swap");
 
 h1 {
-  font-family: "Raleway", serif;
+  font-family: "Viga", serif;
   font-size: 3.2em;
-  font-weight: 400;
+  font-weight: 700;
+  color: #d95c3a;
+  text-align: center;
+  margin: 0;
+  padding: 10px;
+}
+
+h2 {
+  font-family: "Viga", serif;
+  font-size: 2.5em;
+  font-weight: 700;
+  color: #d95c3a;
+  text-align: center;
+  margin: 0;
+  padding: 5px;
+}
+
+h3 {
+  font-family: "Viga", serif;
+  font-size: 2em;
+  font-weight: 700;
+  color: #d95c3a;
+  text-align: center;
+  margin: 5px;
+  padding: 5px;
+}
+
+h4 {
+  font-family: "Viga", serif;
+  font-size: 1.5em;
+  font-weight: 500;
   color: #d95c3a;
   margin: 0;
   padding: 0;
 }
-/* apply raleway formatting to h4, make it pretty */
 
-h4 {
-  font-family: "Raleway", sans-serif;
-  font-size: 1em;
-  font-weight: 400;
-  color: #000000;
+h5 {
+  font-family: "Viga", serif;
+  color: #905444;
   text-align: center;
   margin: 0;
   padding: 0;
 }
-/* apply raleway to paragraphs */
 
 p {
   font-family: "Fira Sans", sans-serif;
   font-size: 1.2em;
+  line-height: 1.6;
+  text-align: justify;
   font-weight: 400;
   color: #2e2e2e;
   margin: 0;
@@ -47,15 +65,57 @@ p {
 /* make the body a different color, add some great formatting */
 
 body {
-  background-color: #f5f5f5;
+  font-family: "Fira Sans", Helvetica, sans-serif;
+  line-height: 1.5;
+  color: #666;
   margin: 0;
-  padding: 0;
+  padding: 2em;
+  border: 4px solid #d95c3a;
 }
 
-/* make the header look great */
+/* change the color of active class and tab*/
 
-header {
-  background-color: #ffffff;
-  padding: 1em;
-  margin: 0;
+.nav {
+  background-color: #ececec;
+  color: #ffffff;
+  border-radius: 10px;
+}
+
+/* make the page footer awesome */
+
+.page-footer {
+  border-radius: 10px;
+  text-align: center;
+}
+
+.help-block {
+  color: #d95c3a;
+  text-align: center;
+}
+
+.btn-primary {
+  background-color: #d95c3a;
+  border-color: #d95c3a;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.container-fluid {
+  background-color: #ececec;
+  border-radius: 15px;
+}
+
+.well {
+  background-color: #f5d4cc;
+  border-radius: 10px;
+}
+
+/* id download change and make it better */
+
+#download {
+  background-color: #d95c3a;
+  border-radius: 10px;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px;
 }
